--- a/aio.ipynb
+++ b/aio.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +21,8 @@
     "import time\n",
     "import os\n",
     "\n",
-    "# torch.cuda.set_device(1)\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "torch.cuda.set_device(1)\n",
     "allocate_gpu_memory()"
    ]
   },
@@ -28,6 +38,268 @@
    "metadata": {},
    "source": [
     "## BQ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-24 16:15:42,642] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
+      "---------baseline---------\n",
+      "2024-04-24 16:15:48,570\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
+      "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
+      " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
+      "      'test': {'accuracy': 85.25, 'F1-score': 84.62, 'loss': 0.52}},\n",
+      " 10: {'val': {'accuracy': 85.1, 'F1-score': 84.27, 'loss': 0.53},\n",
+      "      'test': {'accuracy': 84.36, 'F1-score': 83.64, 'loss': 0.54}},\n",
+      " 43: {'val': {'accuracy': 85.74, 'F1-score': 85.49, 'loss': 0.4},\n",
+      "      'test': {'accuracy': 85.38, 'F1-score': 85.19, 'loss': 0.42}},\n",
+      " 46: {'val': {'accuracy': 86.24, 'F1-score': 85.79, 'loss': 0.39},\n",
+      "      'test': {'accuracy': 85.09, 'F1-score': 84.78, 'loss': 0.42}}}\n",
+      "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
+      " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
+      "---------TWR---------\n",
+      "2024-04-24 16:15:48,574\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "best_sedds_of_stage1:  97 53 10 43 46\n",
+      "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
+      "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
+      " 53: {'val': {'accuracy': 85.85, 'F1-score': 85.15, 'loss': 2.31},\n",
+      "      'test': {'accuracy': 85.89, 'F1-score': 85.32, 'loss': 2.33}},\n",
+      " 10: {'val': {'accuracy': 86.12, 'F1-score': 85.51, 'loss': 2.31},\n",
+      "      'test': {'accuracy': 85.87, 'F1-score': 85.4, 'loss': 2.33}},\n",
+      " 43: {'val': {'accuracy': 86.15, 'F1-score': 85.83, 'loss': 1.71},\n",
+      "      'test': {'accuracy': 85.86, 'F1-score': 85.69, 'loss': 1.75}},\n",
+      " 46: {'val': {'accuracy': 86.26, 'F1-score': 85.89, 'loss': 1.73},\n",
+      "      'test': {'accuracy': 85.82, 'F1-score': 85.54, 'loss': 1.72}}}\n",
+      "{'val': {'accuracy': 86.09, 'F1-score': 85.61, 'loss': 2.04},\n",
+      " 'test': {'accuracy': 85.96, 'F1-score': 85.61, 'loss': 2.06}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from toolkit.training import WatchDog\n",
+    "from toolkit.metric import MetricDict\n",
+    "from pprint import pp\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "top_k = 5\n",
+    "\n",
+    "print(\"---------baseline---------\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/BQ/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"97 53 10 43 46\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
+    "\n",
+    "\n",
+    "print(\"---------TWR---------\")\n",
+    "seeds_dir = Path(\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "# metric_dicts.pop(10)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "if len(best_seeds_of_stage1) >= 10:\n",
+    "    for seed_dir in seeds_dir.iterdir():\n",
+    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "            shutil.rmtree(seed_dir)\n",
+    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "14 23 6 17 5\n",
+      "{97: {'val': {'acc_pipline': 86.43, 'f1_pipline': 86.08, 'accuracy': 85.91, 'F1-score': 85.6, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 86.19, 'f1_pipline': 85.92, 'accuracy': 86.01, 'F1-score': 85.81, 'loss': 2.15}},\n",
+      " 53: {'val': {'acc_pipline': 86.22, 'f1_pipline': 85.72, 'accuracy': 85.52, 'F1-score': 85.21, 'loss': 2.26},\n",
+      "      'test': {'acc_pipline': 86.08, 'f1_pipline': 85.71, 'accuracy': 85.88, 'F1-score': 85.67, 'loss': 2.38}},\n",
+      " 10: {'val': {'acc_pipline': 86.24, 'f1_pipline': 85.78, 'accuracy': 85.62, 'F1-score': 85.35, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 85.92, 'f1_pipline': 85.56, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.14}},\n",
+      " 43: {'val': {'acc_pipline': 86.29, 'f1_pipline': 86.0, 'accuracy': 85.96, 'F1-score': 85.81, 'loss': 1.93},\n",
+      "      'test': {'acc_pipline': 86.12, 'f1_pipline': 85.98, 'accuracy': 85.73, 'F1-score': 85.66, 'loss': 1.99}},\n",
+      " 46: {'val': {'acc_pipline': 86.23, 'f1_pipline': 85.88, 'accuracy': 85.59, 'F1-score': 85.27, 'loss': 2.03},\n",
+      "      'test': {'acc_pipline': 85.99, 'f1_pipline': 85.75, 'accuracy': 85.68, 'F1-score': 85.51, 'loss': 2.01}}}\n",
+      "{'val': {'acc_pipline': 86.28, 'f1_pipline': 85.89, 'accuracy': 85.72, 'F1-score': 85.45, 'loss': 2.08},\n",
+      " 'test': {'acc_pipline': 86.06, 'f1_pipline': 85.78, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.13}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"---------TWR-H/P---------\")\n",
+    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
+    "metric_for_compare = \"acc_pipline\"\n",
+    "metric_for_compare = \"accuracy\"\n",
+    "\n",
+    "times = \"0.1\"\n",
+    "ratio = 0.2\n",
+    "# times=\"None\"\n",
+    "\n",
+    "metric_dicts = dict()\n",
+    "seeds = []\n",
+    "for seed_of_stage1 in best_seeds_of_stage1:\n",
+    "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
+    "    seeds_dir = Path(seeds_dir)\n",
+    "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
+    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "    seeds_not_del = []\n",
+    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "    # print(seeds_not_del)\n",
+    "    if _mean:\n",
+    "        metric_dicts[seed_of_stage1] = _mean\n",
+    "        best_seed = list(_metric_dict_topk.keys())[0]\n",
+    "        seeds.append(str(best_seed))\n",
+    "        for seed_dir in seeds_dir.iterdir():\n",
+    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
+    "                shutil.rmtree(seed_dir)\n",
+    "                # print(seed_dir)\n",
+    "\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
+    "print(\" \".join(seeds))\n",
+    "pp(metric_dict_topk, width=120)\n",
+    "pp(mean, width=120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MacBERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR---------\n",
+      "2024-04-24 23:02:50,932 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/54\u001b[0m\n",
+      "2024-04-24 23:02:50,934\u001b[32m <INFO> WatchDog: success/total: 11/12\u001b[0m\n",
+      "best_sedds_of_stage1:  97 46 51 47 48\n",
+      "{97: {'val': {'accuracy': 85.8, 'F1-score': 86.06, 'loss': 1.61},\n",
+      "      'test': {'accuracy': 85.71, 'F1-score': 86.08, 'loss': 1.64}},\n",
+      " 46: {'val': {'accuracy': 86.31, 'F1-score': 85.95, 'loss': 1.76},\n",
+      "      'test': {'accuracy': 85.64, 'F1-score': 85.41, 'loss': 1.82}},\n",
+      " 51: {'val': {'accuracy': 86.35, 'F1-score': 85.89, 'loss': 2.11},\n",
+      "      'test': {'accuracy': 85.6, 'F1-score': 85.25, 'loss': 2.2}},\n",
+      " 47: {'val': {'accuracy': 86.07, 'F1-score': 85.59, 'loss': 2.17},\n",
+      "      'test': {'accuracy': 85.55, 'F1-score': 85.12, 'loss': 2.25}},\n",
+      " 48: {'val': {'accuracy': 86.79, 'F1-score': 86.6, 'loss': 1.79},\n",
+      "      'test': {'accuracy': 85.43, 'F1-score': 85.27, 'loss': 1.9}}}\n",
+      "{'val': {'accuracy': 86.26, 'F1-score': 86.02, 'loss': 1.89},\n",
+      " 'test': {'accuracy': 85.59, 'F1-score': 85.43, 'loss': 1.96}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from toolkit.training import WatchDog\n",
+    "from toolkit.metric import MetricDict\n",
+    "from pprint import pp\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "top_k = 5\n",
+    "\n",
+    "# print(\"---------baseline---------\")\n",
+    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "# # metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# seeds = \"97 53 10 43 46\"\n",
+    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# pp(metric_dict_topk)\n",
+    "# pp(mean)\n",
+    "\n",
+    "\n",
+    "print(\"---------TWR---------\")\n",
+    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "# metric_dicts.pop(10)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "if len(best_seeds_of_stage1) >= 10:\n",
+    "    for seed_dir in seeds_dir.iterdir():\n",
+    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "            shutil.rmtree(seed_dir)\n",
+    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"---------TWR-H/P---------\")\n",
+    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
+    "metric_for_compare = \"acc_pipline\"\n",
+    "metric_for_compare = \"accuracy\"\n",
+    "\n",
+    "times = \"0.1\"\n",
+    "ratio = 0.2\n",
+    "# times=\"None\"\n",
+    "\n",
+    "metric_dicts = dict()\n",
+    "seeds = []\n",
+    "for seed_of_stage1 in best_seeds_of_stage1:\n",
+    "    seeds_dir = f\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
+    "    seeds_dir = Path(seeds_dir)\n",
+    "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
+    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "    seeds_not_del = []\n",
+    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "    # print(seeds_not_del)\n",
+    "    if _mean:\n",
+    "        metric_dicts[seed_of_stage1] = _mean\n",
+    "        best_seed = list(_metric_dict_topk.keys())[0]\n",
+    "        seeds.append(str(best_seed))\n",
+    "        for seed_dir in seeds_dir.iterdir():\n",
+    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
+    "                shutil.rmtree(seed_dir)\n",
+    "                # print(seed_dir)\n",
+    "\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
+    "print(\" \".join(seeds))\n",
+    "pp(metric_dict_topk, width=120)\n",
+    "pp(mean, width=120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------"
    ]
   },
   {
@@ -194,108 +466,6 @@
     "        for seed_dir in seeds_dir.iterdir():\n",
     "            if int(seed_dir.name) != best_seed and int(seed_dir.name) in _metric_dicts:\n",
     "                shutil.rmtree(seed_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
-    "print(\" \".join(seeds))\n",
-    "pp(metric_dict_topk)\n",
-    "pp(mean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------TWR-H---------\n",
-      "2024-04-23 02:33:08,357 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=53/1/16/3e-05/1\u001b[0m\n",
-      "1 68 68 68 68\n",
-      "{43: {'val': {'acc_pipline': 86.26,\n",
-      "              'f1_pipline': 86.03,\n",
-      "              'accuracy': 85.51,\n",
-      "              'F1-score': 85.35,\n",
-      "              'loss': 1.98},\n",
-      "      'test': {'acc_pipline': 86.12,\n",
-      "               'f1_pipline': 85.98,\n",
-      "               'accuracy': 85.62,\n",
-      "               'F1-score': 85.48,\n",
-      "               'loss': 2.06}},\n",
-      " 97: {'val': {'acc_pipline': 86.37,\n",
-      "              'f1_pipline': 86.09,\n",
-      "              'accuracy': 85.81,\n",
-      "              'F1-score': 85.64,\n",
-      "              'loss': 2.0},\n",
-      "      'test': {'acc_pipline': 86.14,\n",
-      "               'f1_pipline': 85.92,\n",
-      "               'accuracy': 85.49,\n",
-      "               'F1-score': 85.36,\n",
-      "               'loss': 2.07}},\n",
-      " 10: {'val': {'acc_pipline': 86.16,\n",
-      "              'f1_pipline': 85.68,\n",
-      "              'accuracy': 85.48,\n",
-      "              'F1-score': 85.15,\n",
-      "              'loss': 2.31},\n",
-      "      'test': {'acc_pipline': 85.95,\n",
-      "               'f1_pipline': 85.63,\n",
-      "               'accuracy': 85.47,\n",
-      "               'F1-score': 85.32,\n",
-      "               'loss': 2.36}},\n",
-      " 53: {'val': {'acc_pipline': 0.86,\n",
-      "              'f1_pipline': 0.85,\n",
-      "              'accuracy': 85.55,\n",
-      "              'F1-score': 85.14,\n",
-      "              'loss': 2.22},\n",
-      "      'test': {'acc_pipline': 0.86,\n",
-      "               'f1_pipline': 0.85,\n",
-      "               'accuracy': 85.26,\n",
-      "               'F1-score': 84.93,\n",
-      "               'loss': 2.26}},\n",
-      " 46: {'val': {'acc_pipline': 86.15,\n",
-      "              'f1_pipline': 85.82,\n",
-      "              'accuracy': 85.38,\n",
-      "              'F1-score': 85.08,\n",
-      "              'loss': 2.04},\n",
-      "      'test': {'acc_pipline': 85.69,\n",
-      "               'f1_pipline': 85.47,\n",
-      "               'accuracy': 84.9,\n",
-      "               'F1-score': 84.75,\n",
-      "               'loss': 2.02}}}\n",
-      "{'val': {'acc_pipline': 69.16,\n",
-      "         'f1_pipline': 68.89,\n",
-      "         'accuracy': 85.55,\n",
-      "         'F1-score': 85.27,\n",
-      "         'loss': 2.11},\n",
-      " 'test': {'acc_pipline': 68.95,\n",
-      "          'f1_pipline': 68.77,\n",
-      "          'accuracy': 85.35,\n",
-      "          'F1-score': 85.17,\n",
-      "          'loss': 2.15}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"---------TWR-H---------\")\n",
-    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
-    "MetricDict.set_metric_for_compare(\"acc_pipline\")\n",
-    "times = \"0.1\"\n",
-    "ratio = 0.2\n",
-    "# times=\"None\"\n",
-    "metric_dicts = dict()\n",
-    "seeds = []\n",
-    "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
-    "    seeds_dir = Path(seeds_dir)\n",
-    "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
-    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1)\n",
-    "    if _mean:\n",
-    "        metric_dicts[seed_of_stage1] = _mean\n",
-    "        best_seed = list(_metric_dict_topk.keys())[0]\n",
-    "        seeds.append(str(best_seed))\n",
-    "        # for seed_dir in seeds_dir.iterdir():\n",
-    "        #     if int(seed_dir.name) != best_seed and int(seed_dir.name) in _metric_dicts:\n",
-    "        #         shutil.rmtree(seed_dir)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
     "print(\" \".join(seeds))\n",
     "pp(metric_dict_topk)\n",
@@ -867,21 +1037,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------baseline---------\n",
-      "2024-04-24 12:35:47,896 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/42\u001b[0m\n",
-      "2024-04-24 12:35:47,896\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
-      "{}\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from toolkit.training import WatchDog\n",
     "from toolkit.metric import MetricDict\n",
