--- a/aio.ipynb
+++ b/aio.ipynb
@@ -12,17 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-04-26 23:57:50,415] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from toolkit.training.initializer import allocate_gpu_memory\n",
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,21 +202,11 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-26 22:53:49,340 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/26\u001b[0m\n",
-      "2024-04-26 22:53:49,343\u001b[32m <INFO> WatchDog: success/total: 29/30\u001b[0m\n",
-      "best_sedds_of_stage1:  97 13 6 46 3\n",
-      "{97: {'val': {'accuracy': 85.8, 'F1-score': 86.06, 'loss': 1.61},\n",
-      "      'test': {'accuracy': 85.71, 'F1-score': 86.08, 'loss': 1.64}},\n",
-      " 13: {'val': {'accuracy': 86.24, 'F1-score': 85.74, 'loss': 2.15},\n",
-      "      'test': {'accuracy': 85.66, 'F1-score': 85.27, 'loss': 2.28}},\n",
-      " 6: {'val': {'accuracy': 86.18, 'F1-score': 85.72, 'loss': 2.23},\n",
-      "     'test': {'accuracy': 85.65, 'F1-score': 85.2, 'loss': 2.26}},\n",
-      " 46: {'val': {'accuracy': 86.31, 'F1-score': 85.95, 'loss': 1.76},\n",
-      "      'test': {'accuracy': 85.64, 'F1-score': 85.41, 'loss': 1.82}},\n",
-      " 3: {'val': {'accuracy': 86.19, 'F1-score': 85.88, 'loss': 2.1},\n",
-      "     'test': {'accuracy': 85.62, 'F1-score': 85.4, 'loss': 2.14}}}\n",
-      "{'val': {'accuracy': 86.14, 'F1-score': 85.87, 'loss': 1.97},\n",
-      " 'test': {'accuracy': 85.66, 'F1-score': 85.47, 'loss': 2.03}}\n"
+      "2024-04-27 13:51:52,738 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/68\u001b[0m\n",
+      "2024-04-27 13:51:52,739\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
+      "best_sedds_of_stage1:  \n",
+      "{}\n",
+      "{}\n"
      ]
     }
    ],
@@ -237,29 +219,22 @@
     "\n",
     "top_k = 5\n",
     "\n",
-    "print(\"---------baseline---------\")\n",
-    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
-    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "seeds = \"97 53 10 43 46\"\n",
-    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "pp(metric_dict_topk)\n",
-    "pp(mean)\n",
     "\n",
-    "print(\"---------baseline---------\")\n",
-    "seeds_dir = Path(\"outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
-    "# for seed_dir in seeds_dir.iterdir():\n",
-    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
-    "#         shutil.rmtree(seed_dir)\n",
-    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# seeds = \"97 53 10 43 46\"\n",
-    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "pp(metric_dict_topk)\n",
-    "pp(mean)\n",
+    "# print(\"---------baseline---------\")\n",
+    "# seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
+    "# # for seed_dir in seeds_dir.iterdir():\n",
+    "# #     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "# #         shutil.rmtree(seed_dir)\n",
+    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# # seeds = \"97 53 10 43 46\"\n",
+    "# # metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# pp(metric_dict_topk)\n",
+    "# pp(mean)\n",
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
-    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\")\n",
+    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05\")\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
     "# metric_dicts.pop(10)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
@@ -1057,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1040,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-27 00:13:12,302\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "2024-04-26 23:20:17,831\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
       "{3: {'val': {'accuracy': 89.48, 'F1-score': 89.48, 'loss': 0.29},\n",
       "     'test': {'accuracy': 88.11, 'F1-score': 88.75, 'loss': 0.3}},\n",
       " 54: {'val': {'accuracy': 89.2, 'F1-score': 89.21, 'loss': 0.35},\n",
@@ -1079,8 +1054,8 @@
       "{'val': {'accuracy': 89.45, 'F1-score': 89.56, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.37, 'F1-score': 88.22, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-04-27 00:13:12,307 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/24\u001b[0m\n",
-      "2024-04-27 00:13:12,309\u001b[32m <INFO> WatchDog: success/total: 18/19\u001b[0m\n",
+      "2024-04-26 23:20:17,834 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/24\u001b[0m\n",
+      "2024-04-26 23:20:17,835\u001b[32m <INFO> WatchDog: success/total: 18/19\u001b[0m\n",
       "best_sedds_of_stage1:  42 38 20 13 1\n",
       "{42: {'val': {'accuracy': 90.3, 'F1-score': 90.31, 'loss': 1.14},\n",
       "      'test': {'accuracy': 88.34, 'F1-score': 88.93, 'loss': 1.28}},\n",
