--- a/aio.ipynb
+++ b/aio.ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1043,16 +1043,20 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-27 22:23:05,057\u001b[32m <INFO> WatchDog: success/total: 3/3\u001b[0m\n",
-      "best_sedds_of_stage1:  42 38 109\n",
-      "{42: {'val': {'accuracy': 90.73, 'F1-score': 90.78, 'loss': 1.11},\n",
-      "      'test': {'accuracy': 88.71, 'F1-score': 89.28, 'loss': 1.28}},\n",
-      " 38: {'val': {'accuracy': 90.56, 'F1-score': 90.62, 'loss': 1.14},\n",
-      "      'test': {'accuracy': 88.25, 'F1-score': 88.9, 'loss': 1.27}},\n",
-      " 109: {'val': {'accuracy': 90.31, 'F1-score': 90.49, 'loss': 1.2},\n",
-      "       'test': {'accuracy': 87.46, 'F1-score': 88.24, 'loss': 1.41}}}\n",
-      "{'val': {'accuracy': 90.53, 'F1-score': 90.63, 'loss': 1.15},\n",
-      " 'test': {'accuracy': 88.14, 'F1-score': 88.81, 'loss': 1.32}}\n"
+      "2024-04-28 01:51:33,353\u001b[32m <INFO> WatchDog: success/total: 17/17\u001b[0m\n",
+      "best_sedds_of_stage1:  42 20 13 1 109\n",
+      "{42: {'val': {'accuracy': 90.3, 'F1-score': 90.31, 'loss': 1.14},\n",
+      "      'test': {'accuracy': 88.34, 'F1-score': 88.93, 'loss': 1.28}},\n",
+      " 20: {'val': {'accuracy': 90.3, 'F1-score': 90.35, 'loss': 1.17},\n",
+      "      'test': {'accuracy': 87.98, 'F1-score': 88.62, 'loss': 1.3}},\n",
+      " 13: {'val': {'accuracy': 90.23, 'F1-score': 90.4, 'loss': 1.14},\n",
+      "      'test': {'accuracy': 87.7, 'F1-score': 88.52, 'loss': 1.28}},\n",
+      " 1: {'val': {'accuracy': 90.38, 'F1-score': 90.49, 'loss': 1.15},\n",
+      "     'test': {'accuracy': 87.65, 'F1-score': 88.36, 'loss': 1.37}},\n",
+      " 109: {'val': {'accuracy': 90.13, 'F1-score': 90.13, 'loss': 1.21},\n",
+      "       'test': {'accuracy': 87.63, 'F1-score': 88.32, 'loss': 1.36}}}\n",
+      "{'val': {'accuracy': 90.27, 'F1-score': 90.34, 'loss': 1.16},\n",
+      " 'test': {'accuracy': 87.86, 'F1-score': 88.55, 'loss': 1.32}}\n"
      ]
     }
    ],
@@ -1079,7 +1083,7 @@
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
-    "seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05\"\n",
+    "seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
     "seeds_dir = Path(seeds_dir)\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
@@ -2895,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2903,14 +2907,15 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-27 22:20:27,838 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/22\u001b[0m\n",
-      "2024-04-27 22:20:27,838\u001b[32m <INFO> WatchDog: success/total: 4/5\u001b[0m\n",
-      "best_sedds_of_stage1:  78 2 44 52\n",
+      "2024-04-28 01:52:14,965 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/6\u001b[0m\n",
+      "2024-04-28 01:52:14,965\u001b[32m <INFO> WatchDog: success/total: 6/7\u001b[0m\n",
+      "best_sedds_of_stage1:  78 2 22 5 44\n",
       "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.66, 'loss': 1.03}},\n",
       " 2: {'val': {'accuracy': 91.42, 'F1-score': 88.62, 'loss': 1.02}},\n",
-      " 44: {'val': {'accuracy': 91.27, 'F1-score': 88.4, 'loss': 1.03}},\n",
-      " 52: {'val': {'accuracy': 91.26, 'F1-score': 88.42, 'loss': 1.01}}}\n",
-      "{'val': {'accuracy': 91.34, 'F1-score': 88.53, 'loss': 1.02}}\n"
+      " 22: {'val': {'accuracy': 91.39, 'F1-score': 88.63, 'loss': 1.03}},\n",
+      " 5: {'val': {'accuracy': 91.37, 'F1-score': 88.59, 'loss': 1.03}},\n",
+      " 44: {'val': {'accuracy': 91.27, 'F1-score': 88.4, 'loss': 1.03}}}\n",
+      "{'val': {'accuracy': 91.38, 'F1-score': 88.58, 'loss': 1.03}}\n"
      ]
     }
    ],
