--- a/aio.ipynb
+++ b/aio.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,17 +202,21 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-27 22:33:29,002 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/97\u001b[0m\n",
-      "2024-04-27 22:33:29,004\u001b[32m <INFO> WatchDog: success/total: 3/4\u001b[0m\n",
-      "best_sedds_of_stage1:  149 68 109\n",
-      "{149: {'val': {'accuracy': 86.06, 'F1-score': 85.72, 'loss': 1.77},\n",
+      "2024-04-28 01:41:01,491 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/13\u001b[0m\n",
+      "2024-04-28 01:41:01,493\u001b[32m <INFO> WatchDog: success/total: 5/6\u001b[0m\n",
+      "best_sedds_of_stage1:  43 149 97 68 109\n",
+      "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
+      "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
+      " 149: {'val': {'accuracy': 86.06, 'F1-score': 85.72, 'loss': 1.77},\n",
       "       'test': {'accuracy': 85.75, 'F1-score': 85.48, 'loss': 1.84}},\n",
+      " 97: {'val': {'accuracy': 86.44, 'F1-score': 86.04, 'loss': 2.0},\n",
+      "      'test': {'accuracy': 85.71, 'F1-score': 85.44, 'loss': 2.1}},\n",
       " 68: {'val': {'accuracy': 86.42, 'F1-score': 86.14, 'loss': 1.76},\n",
       "      'test': {'accuracy': 85.48, 'F1-score': 85.26, 'loss': 1.81}},\n",
       " 109: {'val': {'accuracy': 86.33, 'F1-score': 86.15, 'loss': 1.57},\n",
       "       'test': {'accuracy': 85.28, 'F1-score': 85.11, 'loss': 1.67}}}\n",
-      "{'val': {'accuracy': 86.27, 'F1-score': 86.0, 'loss': 1.7},\n",
-      " 'test': {'accuracy': 85.5, 'F1-score': 85.28, 'loss': 1.77}}\n"
+      "{'val': {'accuracy': 86.26, 'F1-score': 86.0, 'loss': 1.76},\n",
+      " 'test': {'accuracy': 85.68, 'F1-score': 85.49, 'loss': 1.83}}\n"
      ]
     }
    ],
