--- a/aio.ipynb
+++ b/aio.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -202,20 +202,21 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-28 20:24:48,031\u001b[32m <INFO> WatchDog: success/total: 32/32\u001b[0m\n",
-      "best_sedds_of_stage1:  43 149 12 97 25\n",
-      "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
-      "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
-      " 149: {'val': {'accuracy': 86.06, 'F1-score': 85.72, 'loss': 1.77},\n",
-      "       'test': {'accuracy': 85.75, 'F1-score': 85.48, 'loss': 1.84}},\n",
-      " 12: {'val': {'accuracy': 86.56, 'F1-score': 86.38, 'loss': 1.74},\n",
-      "      'test': {'accuracy': 85.74, 'F1-score': 85.67, 'loss': 1.84}},\n",
-      " 97: {'val': {'accuracy': 86.44, 'F1-score': 86.04, 'loss': 2.0},\n",
-      "      'test': {'accuracy': 85.71, 'F1-score': 85.44, 'loss': 2.1}},\n",
-      " 25: {'val': {'accuracy': 86.17, 'F1-score': 85.8, 'loss': 1.72},\n",
-      "      'test': {'accuracy': 85.57, 'F1-score': 85.35, 'loss': 1.78}}}\n",
-      "{'val': {'accuracy': 86.25, 'F1-score': 85.98, 'loss': 1.79},\n",
-      " 'test': {'accuracy': 85.79, 'F1-score': 85.62, 'loss': 1.86}}\n"
+      "2024-04-29 00:26:37,021 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/1e-05/6\u001b[0m\n",
+      "2024-04-29 00:26:37,024\u001b[32m <INFO> WatchDog: success/total: 6/7\u001b[0m\n",
+      "best_sedds_of_stage1:  68 43 149 13 97\n",
+      "{68: {'val': {'accuracy': 85.67, 'F1-score': 85.47, 'loss': 1.66},\n",
+      "      'test': {'accuracy': 85.59, 'F1-score': 85.6, 'loss': 1.7}},\n",
+      " 43: {'val': {'accuracy': 85.85, 'F1-score': 85.75, 'loss': 1.67},\n",
+      "      'test': {'accuracy': 85.5, 'F1-score': 85.53, 'loss': 1.7}},\n",
+      " 149: {'val': {'accuracy': 86.11, 'F1-score': 85.83, 'loss': 1.7},\n",
+      "       'test': {'accuracy': 85.3, 'F1-score': 85.12, 'loss': 1.76}},\n",
+      " 13: {'val': {'accuracy': 85.87, 'F1-score': 85.52, 'loss': 1.94},\n",
+      "      'test': {'accuracy': 85.25, 'F1-score': 85.04, 'loss': 1.99}},\n",
+      " 97: {'val': {'accuracy': 86.0, 'F1-score': 85.68, 'loss': 1.84},\n",
+      "      'test': {'accuracy': 85.13, 'F1-score': 84.9, 'loss': 1.91}}}\n",
+      "{'val': {'accuracy': 85.9, 'F1-score': 85.65, 'loss': 1.76},\n",
+      " 'test': {'accuracy': 85.35, 'F1-score': 85.24, 'loss': 1.81}}\n"
      ]
     }
    ],
@@ -243,7 +244,7 @@
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
-    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05\")\n",
+    "seeds_dir = Path(\"outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/1e-05\")\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
     "# metric_dicts.pop(10)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
